--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
+    "@stripe/stripe-js": "^8.6.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.88.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "^16.0.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
